fixed canvas size and image size bugs on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,6 @@ main {
     @apply border-l;
     @apply border-r;
     @apply border-gray-700;
-    @apply flex;
   }
 }
 
